--- a/front/package.json
+++ b/front/package.json
@@ -10,7 +10,17 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "nuxt": "^3.12.3",
     "vue": "latest"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
+    "autoprefixer": "^10.4.16",
+    "nuxt-icon": "^0.6.8",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
+    "vite-plugin-vuetify": "^2.0.3",
+    "vuetify": "^3.6.11"
   }
 }
