--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,6 @@
     "titleBar.activeBackground": "#3E3E55",
     "titleBar.activeForeground": "#FAFAFB"
   },
-  "cSpell.words": ["hono", "Hono"],
+  "cSpell.words": ["hono", "Hono", "visio"],
   "conventionalCommits.scopes": ["Swagger", "Bruno"]
 }
