docs(Bruno): :memo: add likes crud into bruno

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,5 @@
     "titleBar.activeForeground": "#FAFAFB"
   },
   "cSpell.words": ["hono", "Hono", "visio"],
-  "conventionalCommits.scopes": ["Swagger", "Bruno"]
+  "conventionalCommits.scopes": ["Swagger", "Bruno", "CRUD"]
 }
