--- a/front/package.json
+++ b/front/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.12.3",
+    "pinia": "^2.1.7",
     "vue": "latest"
   },
   "devDependencies": {
@@ -22,5 +24,8 @@
     "tailwindcss": "^3.4.0",
     "vite-plugin-vuetify": "^2.0.3",
     "vuetify": "^3.6.11"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
