--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "vue": "latest"
   },
   "devDependencies": {
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.16",
     "nuxt-icon": "^0.6.8",
