* chore(package.json): update "dev" script in package.json to include "--watch" flag

--- a/back/package.json
+++ b/back/package.json
@@ -2,7 +2,7 @@
   "name": "challenge-stack-2024-2",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts --watch"
   },
   "dependencies": {
     "@hono/node-server": "^1.12.0",
