--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@daily-co/daily-js": "^0.67.0",
     "@mdi/font": "^7.4.47",
     "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.12.3",
