--- a/front/package.json
+++ b/front/package.json
@@ -15,7 +15,8 @@
     "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.12.3",
     "pinia": "^2.1.7",
-    "vue": "latest"
+    "vue": "latest",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
