--- a/back/package.json
+++ b/back/package.json
@@ -10,12 +10,14 @@
     "dotenv": "^16.4.5",
     "hono": "^4.4.12",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.5"
+    "mongoose": "^8.4.5",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.17",
+    "@types/ws": "^8.5.10",
     "tsx": "^4.7.1"
   }
 }
